fix(study): harden speaking estimate flow